--- a/laravel/_sources/member/_custom_fa_icons.scss
+++ b/laravel/_sources/member/_custom_fa_icons.scss
@@ -274,7 +274,7 @@
 //.#{$fa-css-prefix}-circle-o:before { content: $fa-var-circle-o; }
 //.#{$fa-css-prefix}-quote-left:before { content: $fa-var-quote-left; }
 //.#{$fa-css-prefix}-quote-right:before { content: $fa-var-quote-right; }
-//.#{$fa-css-prefix}-spinner:before { content: $fa-var-spinner; }
+.#{$fa-css-prefix}-spinner:before { content: $fa-var-spinner; }
 //.#{$fa-css-prefix}-circle:before { content: $fa-var-circle; }
 //.#{$fa-css-prefix}-mail-reply:before,
 //.#{$fa-css-prefix}-reply:before { content: $fa-var-reply; }
