modification css vue seacrh

--- a/laravel/public/css/jeremTemp.css
+++ b/laravel/public/css/jeremTemp.css
@@ -1,7 +1,9 @@
 /*View recherche avancée*/
 .advancedSearch{
+    font-size: 15px;
+    color: white;
     text-align: center;
-    background-color: white;
+    /*background-color: white;*/
     margin: auto;
     width: 60%;
     padding-top: 50px;
@@ -10,7 +12,12 @@
     margin-top: 50px;
 }
 
+.boutcolor{
+    color: black;
+}
+
 .resultSearch{
+    font-size: 18px;
     margin: auto;
     border: double;
 }
@@ -129,4 +136,18 @@
 .pagination-sm>li:last-child>a, .pagination-sm>li:last-child>span {
     border-bottom-left-radius: 3px;
     border-top-left-radius: 3px
+}
+
+
+/*dashboard*/
+.dashboardInfos{
+    width: 70%;
+    margin: auto;
+    padding-top: 250px;
+    padding-bottom: 100px;
+    text-align: center;
+    color: black !important;
+}
+.dashboardInfos h2{
+    color: black;
 }
