--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -392,22 +392,76 @@ footer a:active, footer a:hover
     font-size: 1.5em;
     border-radius: 15px;
     border: 3px solid #ccc;
-    background-color: #333;
+    background-color: #202020;
     color: #fff;
 }
 
-.utils ul{
-    list-style: none;
+.utils ul {
+
     width: 180px;
     height: 220px;
-    margin: 0 auto
+    margin: 0 auto;
+    padding: 0
+        
 }
-
+.utils li {
+    list-style: none;
+    text-align: center
+    }
+    
+.utils h2 {
+    font-size: 1.2em;
+    text-align: center       
+    }
 .avatar {
     border-radius: 50%;
     border: 2px solid #000;
-    margin: 5px    
+    margin-left: 13px;
+    margin-bottom: 10px    
 }
+/* ============================================================================
+                               Photographe
+=============================================================================*/
+#photog {
+    position: absolute;
+    z-index: 3;
+    list-style-type: none;
+    font-size: 1.5em;
+    color: #fff;
+}
+
+#photog ul {
+    position: absolute;
+    z-index: 3;
+    width: 180px;
+    height: 220px;
+    margin: 0 auto;
+    padding: 0
+        
+}
+#photog li {
+    list-style: none;
+    text-align: center
+    }   
+#photog h2 {
+    position: absolute;
+    padding: 20px 10px;
+    font-size: 1.2em;
+    text-align: center       
+    }
+    
+.pavatar {
+    position: absolute;
+    border-radius: 50%;
+    border: 2px solid #000;
+    margin-left: 13px;
+    z-index: 3;
+    margin-bottom: 10px    
+}
+
+
+
+
 /* ============================================================================
                                Slideshow
 =============================================================================*/
