--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -423,45 +423,68 @@ footer a:active, footer a:hover
                                Photographe
 =============================================================================*/
 #photog {
-    position: absolute;
-    z-index: 3;
     list-style-type: none;
     font-size: 1.5em;
-    color: #fff;
+    color: #fff
 }
 
-#photog ul {
-    position: absolute;
-    z-index: 3;
-    width: 180px;
-    height: 220px;
-    margin: 0 auto;
-    padding: 0
-        
-}
-#photog li {
-    list-style: none;
-    text-align: center
-    }   
-#photog h2 {
-    position: absolute;
-    padding: 20px 10px;
-    font-size: 1.2em;
-    text-align: center       
-    }
-    
 .pavatar {
     position: absolute;
     border-radius: 50%;
     border: 2px solid #000;
-    margin-left: 13px;
+    margin-left: 15px;
+    margin-top:50px;
     z-index: 3;
-    margin-bottom: 10px    
+    width: 150px
+}   
+
+#photog ul {
+    position: absolute;
+    margin-left: 15px;
+    margin-top: 50px;
+    z-index: 3;
+    width: auto;
+    min-width: 400px;
+    height: auto;
+    min-height: 400px;
+    padding-left: 15px
+}
+#photog ul p {
+    position: absolute;
+    margin-top: 160px;
+    margin-right: 10px
+    /*overflow-y: scroll*/
 }
 
+#photog ul ul {
+    list-style: none;
+    margin-left: 160px;
+    height: 60px;
+    text-align: left;
+    padding: 0
+}   
 
+#photog ul ul li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: left
+}   
 
+#photog h2 {
+    position: absolute;
+    margin-left: 180px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 1.2em;
+    text-align: left       
+}
 
+#photoPhoto img{
+    max-width: 100%;
+    height: 700px;
+    margin: 5px;
+}
 /* ============================================================================
                                Slideshow
 =============================================================================*/
