Mise a jour vue Photographe

--- a/laravel/_sources/public/_custom_fa_icons.scss
+++ b/laravel/_sources/public/_custom_fa_icons.scss
@@ -157,9 +157,9 @@
 //.#{$fa-css-prefix}-square-o:before { content: $fa-var-square-o; }
 //.#{$fa-css-prefix}-bookmark-o:before { content: $fa-var-bookmark-o; }
 //.#{$fa-css-prefix}-phone-square:before { content: $fa-var-phone-square; }
-//.#{$fa-css-prefix}-twitter:before { content: $fa-var-twitter; }
+.#{$fa-css-prefix}-twitter:before { content: $fa-var-twitter; }
 //.#{$fa-css-prefix}-facebook-f:before,
-//.#{$fa-css-prefix}-facebook:before { content: $fa-var-facebook; }
+.#{$fa-css-prefix}-facebook:before { content: $fa-var-facebook; }
 //.#{$fa-css-prefix}-github:before { content: $fa-var-github; }
 //.#{$fa-css-prefix}-unlock:before { content: $fa-var-unlock; }
 //.#{$fa-css-prefix}-credit-card:before { content: $fa-var-credit-card; }
@@ -177,7 +177,7 @@
 //.#{$fa-css-prefix}-arrow-circle-right:before { content: $fa-var-arrow-circle-right; }
 //.#{$fa-css-prefix}-arrow-circle-up:before { content: $fa-var-arrow-circle-up; }
 //.#{$fa-css-prefix}-arrow-circle-down:before { content: $fa-var-arrow-circle-down; }
-//.#{$fa-css-prefix}-globe:before { content: $fa-var-globe; }
+.#{$fa-css-prefix}-globe:before { content: $fa-var-globe; }
 //.#{$fa-css-prefix}-wrench:before { content: $fa-var-wrench; }
 //.#{$fa-css-prefix}-tasks:before { content: $fa-var-tasks; }
 //.#{$fa-css-prefix}-filter:before { content: $fa-var-filter; }
@@ -431,7 +431,7 @@
 //.#{$fa-css-prefix}-mortar-board:before,
 //.#{$fa-css-prefix}-graduation-cap:before { content: $fa-var-graduation-cap; }
 //.#{$fa-css-prefix}-yahoo:before { content: $fa-var-yahoo; }
-//.#{$fa-css-prefix}-google:before { content: $fa-var-google; }
+.#{$fa-css-prefix}-google:before { content: $fa-var-google; }
 //.#{$fa-css-prefix}-reddit:before { content: $fa-var-reddit; }
 //.#{$fa-css-prefix}-reddit-square:before { content: $fa-var-reddit-square; }
 //.#{$fa-css-prefix}-stumbleupon-circle:before { content: $fa-var-stumbleupon-circle; }
