--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -243,6 +243,14 @@ div.bordureB {
 #slide {
     display: block
 }
+#slide h1{
+    z-index: 3;
+    position: absolute;
+    padding-top: 100px;
+    padding-right:  100px;
+    font-size: 4.4em;
+    color: #ccc
+}
 
 #baniereFooter {
     display: flex
